Fix nav text overlap

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5015,7 +5015,8 @@ nav {
     color: #fff; }
   nav .nav-wrapper {
     position: relative;
-    height: 100%; }
+    height: 100%; 
+    min-width: 490px;}
     nav .nav-wrapper i {
       display: block;
       font-size: 2rem; }
